--- a/index.html
+++ b/index.html
@@ -6,9 +6,184 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Football</title>
+    <!-- CSS file -->
+    <link rel="stylesheet" href="style.css">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <!-- Font Awesome, Kit doesn't work here so i added files  here  -->
+    <link rel="stylesheet" href="font-awesome/css/all.min.css">
 </head>
 
 <body>
+    <!-----------------
+     -------Header----
+    -------------------->
+    <Header>
+        <section class="header-sec">
+            <div class="header-div">
+                <div class="title">
+                    <h1>Conmebol </h1>
+                    <h1>Copa America </h1>
+                    <h1>2021</h1>
+                    <div class="buttons">
+                        <a class="button" href="_blank">Watch Live <i class="fas fa-arrow-right"></i></a>
+                    </div>
+
+                </div>
+            </div>
+            <div class="header-div">
+                <img src="images/banner.png" alt="">
+            </div>
+        </section>
+    </Header>
+    <!-----------------
+         Main section  
+        ----------------->
+    <Main>
+        <section class="container">
+            <div class="players">
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-1.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2>Neymar Jr</h2>
+                        <p>Neymar Jr is a Brazilian professional footballer who plays as a forward for PSG and the
+                            Brazil national team.
+                        </p>
+                    </div>
+
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-2.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2>Lionel Messi</h2>
+                        <p>Lionel Messi is an Argentine professional footballer who plays as a forward and captains the
+                            Argentina national team.</p>
+
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-3.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2>Cristiano Ronaldo</h2>
+                        <p>Crstiano Ronaldo is a Portuguese professional footballer who plays as a forward for Juventus
+                            and captains the Portugal national team.</p>
+
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-4.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2>Paulo Dybala</h2>
+                        <p>Paulo Dybala is an Argentine professional footballer who plays as a forward for Juventus.</p>
+
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-5.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2>Mesut Ozil</h2>
+                        <p> Ozil is a German professional footballer who plays as an attacking midfielder for Süper Lig
+                            club Fenerbahçe.</p>
+
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-6.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2>Mauro Icardi</h2>
+                        <p>Icardi is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris
+                            Saint-Germain.</p>
+
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-7.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2>Di Maria</h2>
+                        <p>Di Maria is an Argentine professional footballer who plays for Ligue 1 club Paris
+                            Saint-Germain and Argentina national team.</p>
+
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-8.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2>Kylian Mbappe</h2>
+                        <p>Mbappe is a French professional footballer who plays as a forward for Ligue 1 club Paris
+                            Saint-Germain and the France national team.</p>
+
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-9.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2>Mohamed Salah</h2>
+                        <p>Salah is an Egyptian professional footballer who plays as a forward for Premier League club
+                            Liverpool and captains the Egypt national team.</p>
+
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-10.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2>Harry Kane</h2>
+                        <p>Kane is an English professional footballer who plays as a striker for
+                            Tottenham Hotspur and captains the England national team.</p>
+
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-11.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2>Kevin De Bruyne</h2>
+                        <p>Bruyne is a Belgian professional footballer who plays as a midfielder for Premier League club
+                            Manchester City and the Belgium national team.</p>
+
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-12.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2>Philippe Coutinho</h2>
+                        <p>Coutinho is a Brazilian professional footballer who plays as an attacking midfielder or
+                            winger for Spanish club Barcelona and Brazil national team.</p>
+
+                    </div>
+                </div>
+
+
+
+
+            </div>
+
+        </section>
+    </Main>
 
 </body>
 
