--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <img src="images/players/player-1.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Neymar Jr</h2>
+                        <h3>Neymar Jr</h3>
                         <p>Neymar Jr is a Brazilian professional footballer who plays as a forward for PSG and the
                             Brazil national team.
                         </p>
@@ -61,7 +61,7 @@
                         <img src="images/players/player-2.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Lionel Messi</h2>
+                        <h3>Lionel Messi</h3>
                         <p>Lionel Messi is an Argentine professional footballer who plays as a forward and captains the
                             Argentina national team.</p>
 
@@ -72,7 +72,7 @@
                         <img src="images/players/player-3.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Cristiano Ronaldo</h2>
+                        <h3>Cristiano Ronaldo</h3>
                         <p>Crstiano Ronaldo is a Portuguese professional footballer who plays as a forward for Juventus
                             and captains the Portugal national team.</p>
 
@@ -83,7 +83,7 @@
                         <img src="images/players/player-4.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Paulo Dybala</h2>
+                        <h3>Paulo Dybala</h3>
                         <p>Paulo Dybala is an Argentine professional footballer who plays as a forward for Juventus.</p>
 
                     </div>
@@ -93,7 +93,7 @@
                         <img src="images/players/player-5.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Mesut Ozil</h2>
+                        <h3>Mesut Ozil</h3>
                         <p> Ozil is a German professional footballer who plays as an attacking midfielder for Süper Lig
                             club Fenerbahçe.</p>
 
@@ -104,7 +104,7 @@
                         <img src="images/players/player-6.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Mauro Icardi</h2>
+                        <h3>Mauro Icardi</h3>
                         <p>Icardi is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris
                             Saint-Germain.</p>
 
@@ -115,7 +115,7 @@
                         <img src="images/players/player-7.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Di Maria</h2>
+                        <h3>Di Maria</h3>
                         <p>Di Maria is an Argentine professional footballer who plays for Ligue 1 club Paris
                             Saint-Germain and Argentina national team.</p>
 
@@ -126,7 +126,7 @@
                         <img src="images/players/player-8.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Kylian Mbappe</h2>
+                        <h3>Kylian Mbappe</h3>
                         <p>Mbappe is a French professional footballer who plays as a forward for Ligue 1 club Paris
                             Saint-Germain and the France national team.</p>
 
@@ -137,7 +137,7 @@
                         <img src="images/players/player-9.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Mohamed Salah</h2>
+                        <h3>Mohamed Salah</h3>
                         <p>Salah is an Egyptian professional footballer who plays as a forward for Premier League club
                             Liverpool and captains the Egypt national team.</p>
 
@@ -148,7 +148,7 @@
                         <img src="images/players/player-10.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Harry Kane</h2>
+                        <h3>Harry Kane</h3>
                         <p>Kane is an English professional footballer who plays as a striker for
                             Tottenham Hotspur and captains the England national team.</p>
 
@@ -159,7 +159,7 @@
                         <img src="images/players/player-11.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Kevin De Bruyne</h2>
+                        <h3>Kevin De Bruyne</h3>
                         <p>Bruyne is a Belgian professional footballer who plays as a midfielder for Premier League club
                             Manchester City and the Belgium national team.</p>
 
@@ -170,7 +170,7 @@
                         <img src="images/players/player-12.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Philippe Coutinho</h2>
+                        <h3>Philippe Coutinho</h3>
                         <p>Coutinho is a Brazilian professional footballer who plays as an attacking midfielder or
                             winger for Spanish club Barcelona and Brazil national team.</p>
 
@@ -183,6 +183,28 @@
             </div>
 
         </section>
+        <!------------------------
+         All Highlight Copa America
+        ---------------------------->
+        <section class="container">
+            <div class="highlights">
+                <div class="highlights-inner">
+                    <h2>All Highlights</h2>
+                    <h2> Copa America 2021</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ipsum, sed, quidem cum
+                        necessitatibus
+                        exercitationem ipsam dicta, nihil impedit debitis quos commodi illo ea sit omnis fugit labore
+                        consequuntur. Sapiente?</p>
+                    <a class="button" href="_blank">Watch Now <i class="fas fa-arrow-right"></i></a>
+
+                </div>
+                <div class="highlights-inner">
+                    <img src="images/match.png" alt="">
+                </div>
+            </div>
+
+        </section>
+
     </Main>
 
 </body>
