--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h1>Copa America </h1>
                     <h1>2021</h1>
                     <div class="buttons">
-                        <a class="button" href="_blank">Watch Live <i class="fas fa-arrow-right"></i></a>
+                        <a target="_blank" class="button" href="">Watch Live <i class="fas fa-arrow-right"></i></a>
                     </div>
 
                 </div>
@@ -195,7 +195,10 @@
                         necessitatibus
                         exercitationem ipsam dicta, nihil impedit debitis quos commodi illo ea sit omnis fugit labore
                         consequuntur. Sapiente?</p>
-                    <a class="button" href="_blank">Watch Now <i class="fas fa-arrow-right"></i></a>
+                    <div class="buttons">
+                        <a target="_blank" class="button" href="">Watch Now <i class="fas fa-arrow-right"></i></a>
+                    </div>
+
 
                 </div>
                 <div class="highlights-inner">
@@ -204,6 +207,19 @@
             </div>
 
         </section>
+        <footer>
+            <img src="images/Logo.png" alt="">
+            <div>
+                <i class="fab fa-instagram-square"></i>
+                <i class="fab fa-twitter-square"></i>
+                <i class="fab fa-facebook-square"></i>
+                <i class="fab fa-youtube-square"></i>
+            </div>
+
+
+
+            <h6>Copyright © 2022 Football</h6>
+        </footer>
 
     </Main>
 
