--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
      -------Header----
     -------------------->
     <Header>
+        <nav>
+            <div class="nav-bars">
+                <div class="bar-names">
+                    <a target="_blank" href="">Home</a>
+                    <a target="_blank" href="">Clubs</a>
+                    <a target="_blank" href="">World Cup 2023</a>
+                    <a target="_blank" href="">Upcoming Matches</a>
+                    <a target="_blank" href="">Contacts</a>
+                </div>
+                <div class="bar-login">
+                    <a href=""><i class="fas fa-sign-in-alt"></i>Login </a>
+                </div>
+            </div>
+        </nav>
         <section class="header-sec">
             <div class="header-div">
                 <div class="title">
