--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <img src="images/players/player-1.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Neymar Jr</h3>
+                        <h4>Neymar Jr</h4>
                         <p>Neymar Jr is a Brazilian professional footballer who plays as a forward for PSG and the
                             Brazil national team.
                         </p>
@@ -75,7 +75,7 @@
                         <img src="images/players/player-2.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Lionel Messi</h3>
+                        <h4>Lionel Messi</h4>
                         <p>Lionel Messi is an Argentine professional footballer who plays as a forward and captains the
                             Argentina national team.</p>
 
@@ -86,7 +86,7 @@
                         <img src="images/players/player-3.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Cristiano Ronaldo</h3>
+                        <h4>Cristiano Ronaldo</h4>
                         <p>Crstiano Ronaldo is a Portuguese professional footballer who plays as a forward for Juventus
                             and captains the Portugal national team.</p>
 
@@ -97,7 +97,7 @@
                         <img src="images/players/player-4.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Paulo Dybala</h3>
+                        <h4>Paulo Dybala</h4>
                         <p>Paulo Dybala is an Argentine professional footballer who plays as a forward for Juventus.</p>
 
                     </div>
@@ -107,7 +107,7 @@
                         <img src="images/players/player-5.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Mesut Ozil</h3>
+                        <h4>Mesut Ozil</h4>
                         <p> Ozil is a German professional footballer who plays as an attacking midfielder for Süper Lig
                             club Fenerbahçe.</p>
 
@@ -118,7 +118,7 @@
                         <img src="images/players/player-6.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Mauro Icardi</h3>
+                        <h4>Mauro Icardi</h4>
                         <p>Icardi is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris
                             Saint-Germain.</p>
 
@@ -129,7 +129,7 @@
                         <img src="images/players/player-7.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Di Maria</h3>
+                        <h4>Di Maria</h4>
                         <p>Di Maria is an Argentine professional footballer who plays for Ligue 1 club Paris
                             Saint-Germain and Argentina national team.</p>
 
@@ -140,7 +140,7 @@
                         <img src="images/players/player-8.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Kylian Mbappe</h3>
+                        <h4>Kylian Mbappe</h4>
                         <p>Mbappe is a French professional footballer who plays as a forward for Ligue 1 club Paris
                             Saint-Germain and the France national team.</p>
 
@@ -151,7 +151,7 @@
                         <img src="images/players/player-9.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Mohamed Salah</h3>
+                        <h4>Mohamed Salah</h4>
                         <p>Salah is an Egyptian professional footballer who plays as a forward for Premier League club
                             Liverpool and captains the Egypt national team.</p>
 
@@ -162,7 +162,7 @@
                         <img src="images/players/player-10.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Harry Kane</h3>
+                        <h4>Harry Kane</h4>
                         <p>Kane is an English professional footballer who plays as a striker for
                             Tottenham Hotspur and captains the England national team.</p>
 
@@ -173,7 +173,7 @@
                         <img src="images/players/player-11.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Kevin De Bruyne</h3>
+                        <h4>Kevin De Bruyne</h4>
                         <p>Bruyne is a Belgian professional footballer who plays as a midfielder for Premier League club
                             Manchester City and the Belgium national team.</p>
 
@@ -184,7 +184,7 @@
                         <img src="images/players/player-12.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h3>Philippe Coutinho</h3>
+                        <h4>Philippe Coutinho</h4>
                         <p>Coutinho is a Brazilian professional footballer who plays as an attacking midfielder or
                             winger for Spanish club Barcelona and Brazil national team.</p>
 
@@ -205,10 +205,10 @@
                 <div class="highlights-inner">
                     <h2>All Highlights</h2>
                     <h2> Copa America 2021</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ipsum, sed, quidem cum
-                        necessitatibus
-                        exercitationem ipsam dicta, nihil impedit debitis quos commodi illo ea sit omnis fugit labore
-                        consequuntur. Sapiente?</p>
+                    <p>The 2021 Copa América was the 47th edition of the Copa América, the international men's football
+                        championship organised by South America's football ruling body CONMEBOL. The tournament took
+                        place in Brazil from 13 June to 10 July 2021.The tournament was originally scheduled to take
+                        place from 12 June to 12 July 2020 in Argentina and Colombia as the 2020 Copa América. </p>
                     <div class="buttons">
                         <a target="_blank" class="button" href="">Watch Now <i class="fas fa-arrow-right"></i></a>
                     </div>
@@ -221,21 +221,50 @@
             </div>
 
         </section>
-        <footer>
-            <img src="images/Logo.png" alt="">
-            <div>
-                <i class="fab fa-instagram-square"></i>
-                <i class="fab fa-twitter-square"></i>
-                <i class="fab fa-facebook-square"></i>
-                <i class="fab fa-youtube-square"></i>
+        <section></section>
+        <!-----------------
+     Next Matches
+    ------------------>
+        <section class="container">
+            <div class="next-matches">
+                <h3>Next Matches</h3>
+                <div class="matches">
+
+                    <div class="match">
+                        <img class="match-images" src="images/bra-peru.jpg" alt="">
+                        <h4>Brazil-Peru</h4>
+                        <p>July 6,2021 <a target="_blank" href="">Remind Me</a></p>
+
+                    </div>
+                    <div class="match">
+                        <img class="match-images" src="images/arg-col.jpg" alt="">
+                        <h4>Argentina-Colombia</h4>
+                        <p>July 7,2021 <a target="_blank" href="">Remind Me</a></p>
+                    </div>
+                    <div class="match">
+                        <img class="match-images" src="images/italy-eng.jpg" alt="">
+                        <h4>Italy-England</h4>
+                        <p>July 11,2021 <a target="_blank" href="">Remind Me</a></p>
+                    </div>
+                </div>
             </div>
 
-
-
-            <h6>Copyright © 2022 Football</h6>
-        </footer>
+        </section>
 
     </Main>
+    <footer>
+        <img src="images/Logo.png" alt="">
+        <div>
+            <i class="fab fa-instagram-square"></i>
+            <i class="fab fa-twitter-square"></i>
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-youtube-square"></i>
+        </div>
+
+
+
+        <h6>Copyright © 2022 Football</h6>
+    </footer>
 
 </body>
 
