--- a/index.html
+++ b/index.html
@@ -250,6 +250,51 @@
             </div>
 
         </section>
+        <section class="container">
+            <div class="top-clubs">
+                <h3>Clubs</h3>
+                <div class="clubs">
+                    <div class="club">
+                        <img src="images/clubs/club-1.png" alt="">
+                        <h5>Bayern Munich</h5>
+
+                    </div>
+                    <div class="club">
+                        <img src="images/clubs/club-2.png" alt="">
+                        <h5>Real Madrid</h5>
+                    </div>
+                    <div class="club">
+                        <img src="images/clubs/club-3.png" alt="">
+                        <h5>Barcelona</h5>
+                    </div>
+                    <div class="club">
+                        <img src="images/clubs/club-4.png" alt="">
+                        <h5>Chelsea</h5>
+                    </div>
+                    <div class="club">
+                        <img src="images/clubs/club-5.png" alt="">
+                        <h5>Man. City</h5>
+                    </div>
+                    <div class="club">
+                        <img src="images/clubs/club-6.png" alt="">
+                        <h5>Liverpool</h5>
+                    </div>
+                    <div class="club">
+                        <img id="dortmund-image" src="images/clubs/club-7.png" alt="">
+                        <h5>Dortmund</h5>
+                    </div>
+                    <div class="club">
+                        <img src="images/clubs/club-8.png" alt="">
+                        <h5>Man. United</h5>
+                    </div>
+                    <div class="club">
+                        <img src="images/clubs/club-9.jpg" alt="">
+                        <h5>PSG</h5>
+                    </div>
+
+                </div>
+            </div>
+        </section>
 
     </Main>
     <footer>
