--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <!-- Font Awesome, Kit doesn't work here so i added files  here  -->
     <link rel="stylesheet" href="font-awesome/css/all.min.css">
+    <!-- Media Query  -->
+    <link rel="stylesheet" href="media.css">
 </head>
 
 <body>
@@ -52,9 +54,9 @@
             </div>
         </section>
     </Header>
-    <!-----------------
-         Main section  
-        ----------------->
+    <!-------------------------------------------------------------------------
+                                      Main section  
+        ----------------------------------------------------------------------->
     <Main>
         <section class="container">
             <div class="players">
