--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <!-- Font Awesome, Kit doesn't work here so i added files  here  -->
+    <!-- Font Awesome, Kit didn't worked here so i added files  here  -->
     <link rel="stylesheet" href="font-awesome/css/all.min.css">
     <!-- Media Query  -->
     <link rel="stylesheet" href="media.css">
 </head>
 
 <body>
-    <!-----------------
-     -------Header----
-    -------------------->
+    <!--------------------------------------------------------------------------------------------------
+     -----------------------------------------------------------Header----------------------------------
+    ----------------------------------------------------------------------------------------------------->
     <Header>
         <nav>
             <div class="nav-bars">
@@ -54,9 +54,9 @@
             </div>
         </section>
     </Header>
-    <!-------------------------------------------------------------------------
-                                      Main section  
-        ----------------------------------------------------------------------->
+    <!-----------------------------------------------------------------------------------------------------
+         --------------------------------------------------Main section------------------------------------  
+        --------------------------------------------------------------------------------------------------->
     <Main>
         <section class="container">
             <div class="players">
@@ -199,9 +199,9 @@
             </div>
 
         </section>
-        <!------------------------
-         All Highlight Copa America
-        ---------------------------->
+        <!---------------------------------------------------------------------------------------------
+         ---------------------------------------All Highlight Copa America-----------------------------
+        ------------------------------------------------------------------------------------------------>
         <section class="container">
             <div class="highlights">
                 <div class="highlights-inner">
@@ -224,9 +224,9 @@
 
         </section>
 
-        <!-----------------
-     Next Matches
-    ------------------>
+        <!--------------------------------------------------------------------------------------
+     -------------------------------------------Next Matches-------------------------------------
+    ---------------------------------------------------------------------------------------------->
         <section class="container">
             <div class="next-matches">
                 <h3>Next Matches</h3>
@@ -252,6 +252,9 @@
             </div>
 
         </section>
+        <!-----------------------------------------------------------------------------------------
+            ----------------------------------------- Top Clubs------------------------------------
+        ---------------------------------------------------------------------------------------------->
         <section class="container">
             <div class="top-clubs">
                 <h3>Clubs</h3>
@@ -299,6 +302,7 @@
         </section>
 
     </Main>
+    <!------------------------------------------------------ Footer-------------------------------------->
     <footer>
         <img src="images/Logo.png" alt="">
         <div>
